fixed photo stretching

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -142,6 +142,8 @@ main {
     .side-imgs {
       position: relative;
       width: 50%;
+      height: fit-content;
+
       @media (max-width: 830px) {
         width: 100%;
       }
@@ -403,10 +405,10 @@ footer {
   height: fit-content;
   padding-bottom: 60px !important;
 }
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   background: white !important;
   opacity: 1 !important;
 }
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
   background: $main-color !important;
 }
